--- a/starter-mint-ui/assets/popup.css
+++ b/starter-mint-ui/assets/popup.css
@@ -62,6 +62,13 @@
     -webkit-backface-visibility: hidden;
             backface-visibility: hidden;
 }
+.page-popup .mint-popup-5 {
+    width: 100%;
+}
+.page-popup .mint-popup-5 .picker-slot-wrapper, .page-popup .mint-popup-5 .picker-item {
+    -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+}
 .page-popup-wrapper {
     padding: 0 20px;
     top: 50%;
